# arxivapi

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: exceptions.py  main.py  models.py
backend/app/api/: __init__.py  routes.py
backend/app/api/v1/: routes.py
backend/app/api/v1/arxiv/: routes.py
backend/app/api/v1/queries/: routes.py
backend/app/api/v1/results/: routes.py
backend/app/core/: config.py
backend/app/db/: arxiv.py  session.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 1f886ff55765_init.py  ead3fa8b26cb_init.py
backend/app/remotes/: arxiv.py
backend/tests/: conftest.py  helpers.py  test_arxiv_query_builder.py  test_arxiv_remote.py  test_db.py  test_routes.py  test_routes_arxiv.py  test_routes_queries.py  test_routes_results.py
scripts/: generate_env.sh
