[tool.poetry]
name = "app"
version = "0.1.0"
description = "Arxiv API"
authors = ["Leonard Schuler <31131665+LeonardSchuler@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.11"
fastapi = "^0.110.2"
pydantic = "^2.7.1"
gunicorn = "^22.0.0"
SQLAlchemy = {extras = ["asyncio"], version = "^2.0.29"}
httpx = "^0.27.0"
uvicorn = "^0.29.0"
sqlmodel = "^0.0.16"
pydantic-settings = "^2.2.1"
asyncpg = "^0.29.0"
feedparser = "^6.0.11"
alembic = "^1.13.1"

[tool.poetry.dev-dependencies]
pytest = "^8.1.2"
isort = "^5.13.2"
mypy = "^1.10.0"
coverage = "^7.5.0"
codespell = "^2.2.6"
bandit = "^1.7.8"
ruff = "^0.4.2"
black = "^24.4.2"
pytest-pudb = "^0.7.0"
pudb = "^2024.1"
pre-commit = "^3.7.0"
aiosqlite = "^0.20.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
lines_after_imports = 2
line_length = 88
include_trailing_comma = true
sections = 'FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER'

[tool.black]
line-length = 100
include = '\.pyi?$'
extend-exclude = '''
(
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)
'''

[tool.ruff]
line-length = 100
exclude = [".git", "__pycache__", ".mypy_cache", ".pytest_cache", "migrations"]
lint.select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    # "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
lint.ignore = [
    "B904",
    "B006",
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.codespell]
ignore-words-list = 'selectin,'

[tool.coverage.report]
fail_under = 55

[tool.coverage.run]
omit = ['*tests/*']

[tool.mypy]
exclude = ["migrations/"]
# --strict
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
implicit_reexport = false
strict_equality = true
# --strict end

[[tool.mypy.overrides]]
ignore_missing_imports = true
